build: CI에 checkstyle stage 추가 및 배포를 위한 빌드 시에는 검증하지 않도록 변경 (#25)
* build: CI에서 checkstyle과 test를 명시적으로 실행하도록 개선

- test 태스크와 checkstyle의 의존성 제거
- CI에서 checkstyleMain, checkstyleTest, test를 명시적으로 순차 실행
- Railway 빌드는 assemble만 수행하여 빌드 시간 단축
- checkstyleTest 활성화 (테스트 코드도 스타일 검사 적용)

* fix: checkstyleTest 오류 수정

- DatabaseCleanupListener: Javadoc의 @TestExecutionListeners를 {@code} 태그로 감싸기
- DashboardControllerTest: 변수 선언과 사용 사이 거리 규칙 준수를 위해 final 키워드 추가
- checkstyleMain, checkstyleTest 모두 통과 확인

* fix: TestFixtures 생성자의 지역 변수에 final 키워드 추가

- 변수 선언과 사용 사이 거리 규칙 준수 (VariableDeclarationUsageDistance)
- ExpenseRepository, IncomeRepository 등 모든 Repository 변수에 final 적용
- checkstyleTest 통과 확인

* refactor: @Async를 TransactionalEventListener로 변경하여 테스트 안정성 개선

- BudgetAlertEventListener: @Async 제거, @TransactionalEventListener(AFTER_COMMIT) 사용
- BudgetAlertService: 새로운 트랜잭션에서 실행되도록 Propagation.REQUIRES_NEW 설정
- NotificationControllerTest: Awaitility 제거, 동기 검증으로 변경
- import 정리: Propagation을 풀 패키지 경로 대신 import로 간결하게 처리

장점:
- 테스트가 빠르고 안정적 (비동기 대기 불필요)
- 트랜잭션 커밋 후 이벤트 처리 보장
- 데이터 일관성 향상
- CI 환경에서도 안정적으로 동작